fix(installation) solves installation from git;

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,4 +31,8 @@ include-package-data = true
 version = {attr = "tiffwrapper.__version__"}
 
 [tool.setuptools.packages.find]
+namespaces = true
 where = ["."]
+
+[tool.setuptools.package-data]
+"*" = ["*.lut"]
