--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,8 @@ dependencies = [
     "tifffile",
     "matplotlib",
     "numpy",
-    "scipy"
+    "scipy",
+    "levenshtein"
 ]
 requires-python = ">=3.7"
 authors = [
